[gd_scene load_steps=2 format=3 uid="uid://byv3rfijce50c"]

[ext_resource type="Script" path="res://UI/pause_menu.gd" id="1_ddryk"]

[node name="Pause_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ddryk")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="Restart" type="Button" parent="."]
layout_mode = 0
offset_left = 476.0
offset_top = 300.0
offset_right = 676.0
offset_bottom = 340.0
text = "Restart
"

[node name="main_menu" type="Button" parent="."]
layout_mode = 0
offset_left = 476.0
offset_top = 350.0
offset_right = 676.0
offset_bottom = 390.0
text = "Main menu"

[node name="Quit" type="Button" parent="."]
layout_mode = 0
offset_left = 476.0
offset_top = 400.0
offset_right = 676.0
offset_bottom = 440.0
text = "Quit"

[connection signal="pressed" from="Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="main_menu" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_quit_pressed"]
